--- a/ranking.css
+++ b/ranking.css
@@ -1,3 +1,7 @@
+* {
+  font-family: 'Roboto', sans-serif;
+}
+
 table {
     border-collapse: collapse;
     width: 70%;
@@ -14,7 +18,7 @@ table {
 
   h2{
       margin-left: 10%;
-      color: rgb(10, 90, 90)
+      color: #6c8a9b
   }
 
   button {
